--- a/a/src/a/pz/a/index.html
+++ b/a/src/a/pz/a/index.html
@@ -13,155 +13,164 @@
  <output id=sts></output>  <output id="recvsize"></output>  <a href="javascript:stop()">off</a><a href="javascript:start()">on</a> <output id="outp"></output>
  <a href="javascript:compile()">compile</a> <b>source</b>
 <textarea id=src spellcheck=false>
-p++ // frame
-a=0300
-*a=p
+# clr(400,100,70,f00,080+p)
+li m 100     # line width
+li a 400   # yyxx
+li c 70    # nlines
+li d 080   # rgb
+add d p
+call clr
 
-b=:blits // address of tag
-b++ // skip size
-c=*b // load blit[0].pos
+# drwrects(400,100,rects)
+#li m 100     # line width
+li a 400     # yyxx
+li b :rects  # list
+call drwrects
 
-d=1 // step size
-k=7fff // keyb addr
-ld k e // load
-ifp c+=d // if e>0
-ifz c-=d // if e==0
-*b=c // store
+# drwblits(400,blits)
+li a 400     # yyxx
+li k :blits  # list
+call drwblits
 
-m=100 // dispwidth
+# typewriter(400,txt)
+li a 400     # yyxx
+li b :txt    # list
+call typewriter
 
-//call
-a=0400 // from
-c=70 // lines
-d=0f00 // argb
-d+=p
-clr
+# drwdots(400,dots)
+li a 400     # yyxx
+li f :dots   # list
+call drwdots
 
-//call
-a=400
-drwrects
+# *300=p++
+inc p
+li a 300
+st a p
 
-//call
-a=400
-drwblits
+# c=*b=blits++
+li b :blits
+inc b
+ld c b
+# e=*7ffff
+li k 7fff
 
-//call
-a=400
-b=:txt // ref
-typewriter
-
-//call
-a=400
-drwdots
-
+# e=*k
+# switchi{c+=1}{c-=1}{}
+li d 1
+ld e k
+ifp add c d
+ifz sub c d
+# *b=c
+st b c
 ..
-..
+# clr(scr a,linewi m,height c,rgb d)
+#  a,d
 clr:
 lp c
   lp m
     stc a d nxt
     inc d nxt ret
-
-drwdots:
-f=:dots
-c=*f++
-lp c
-  g=*f++ // yyxx
-  h=*f++ // argb
-  g+=a
-  *g++=h nxt ret
-
 ..
+# typewriter(scr a,linewi m,str b)
+#  c,j,f,g,i,d,b
 typewriter:
-c=4 // chwh
-j=f00 // argb
-f:=m // inca
-f-=c
-g=-400 // -c*m
-g+=c // +c
-i=*b++
-lp i
-  d=*b++
-  type nxt
+li c 4     # const c=4
+li j f00   # const j=f00
+tx f m     # f=m
+sub f c    # f-=c
+li g -400  # g-=400
+add g c    # g+=c
+ldc i b    # var i=*b++
+lp i       # times i
+  ldc d b  #   d=*b++
+  call type nxt # type(a,d,g,j)nxt
 ret
 ..
+# type(scr a,chbmp d,chwi c,rgb j,g)
+#  a,d,j
 type:
+# times c
 lp c
+#  times c
   lp c
-    d<<=1
-    ifn *a++=j
-    ifp a++
-    ifz a++
-    j++ nxt
-  a+=f nxt   
-a+=g ret    
+    # d<<=1
+    shf d -1
+    # switchi{*a=j}{a++}{a++}
+    ifn stc a j
+    ifp inc a
+    ifz inc a
+    # j++;nxt
+    inc j nxt
+  # a+=f;nxt
+  add a f nxt
+# a+=g;ret   
+add a g ret    
 ..
-drwrects:
-b=:rects
-ldc b c // len
+# drwdots(scr a,dots f)
+#  c,g,h
+drwdots:
+ldc c f
 lp c
-  a=*b++ // yyxx
-  d=*b++ // argb
-  e=*b++ // hi
-  f=*b++ // wi
-  g:=m // linewdth
-  g-=f // inca
+  ldc g f   # dot addr
+  ldc h f   # dot color
+  add g a   # offset
+  stc g h nxt ret
+..
+# drwrects(scr a,linewi m,rects b)
+#  b,c,a,d,e,f,g
+drwrects:
+ldc c b
+lp c
+  ldc a b
+  ldc d b
+  ldc e b
+  ldc f b
+  tx g m
+  sub g f
   lp e
     lp f
-      *a++=d nxt
-    a+=g nxt
+      stc a d nxt
+    add a g nxt
   nxt ret
 ..
+# drwblits(scr a,blits k,scrwi m)
+#  j,a,b,h,i,e,d
 drwblits:
-k=:blits
-ldc k j
+ldc j k
 lp j
-  a=*k++ // to
-  b=*k++ // from
-  h=*k++ // height
-  i=*k++ // width
-  e:=m
-  e-=i
-  lp h
-    lp i
-      d=*b++
-      ifz a++ nxt
-      ifp *a++=d nxt
-      ifn *a++=d nxt
-    b+=e
-    a+=e nxt
+  ldc a k  # yyxx
+  ldc b k  # from
+  ldc h k  # wi
+  ldc i k  # hi
+  tx e m   # e=m-h
+  sub e h  #
+  lp i
+    lp h
+      ldc d b
+      ifz inc a nxt
+      ifp stc a d nxt
+      ifn stc a d nxt
+    add b e
+    add a e nxt
   nxt ret
-
 ..
-txt:
-. 12 // len
-. 000f 00ff 0fff 0175 
-. 0767 0043
-. 0043 0252 0126 ffff
-. ffff ffff ffff ffff
-. ffff ffff ffff ffff
-. ffff ffff ffff ffff
-. ffff ffff ffff ffff
-. ffff ffff ffff ffff
-. ffff ffff ffff ffff
-
 dots:
 . 1
-//yyxx argb
-. 0100 f00 
-
+# yyxx  rgb
+. 0100 0f00 
+..
 rects:
 . 5
-//yyxx argb hi   wi
+# yyxx  rgb  wi   hi 
 . 3830 0422 0010 0010
 . 040c 0fff 0008 0008
 . 0400 0eee 0008 0008
 . 1000 0ddd 0008 0008
 . 100c 0ccc 0008 0008
-
+..
 blits:
 . 10
-//yyxx adr  wi   hi
+# yyxx from  wi   hi
 . 1030 0000 0020 0020
 . 2080 0000 0020 0020
 . 4080 0000 0020 0020
@@ -178,6 +187,18 @@ blits:
 . 20e0 0000 0020 0020
 . 40e0 0000 0020 0020
 . 60e0 0000 0020 0020
+
+txt:
+. 12
+. 000f 00ff 0fff 0175
+. 0767 0043
+. 0043 0252 0126 ffff
+. ffff ffff ffff ffff
+. ffff ffff ffff ffff
+. ffff ffff ffff ffff
+. ffff ffff ffff ffff
+. ffff ffff ffff ffff
+. ffff ffff ffff ffff
 </textarea> 
 <script>
 $=document.all;
@@ -191,9 +212,13 @@ function start(){
 	ison=true;
 	$.sts.value="on";
 	frameno=0;
-	ws=new WebSocket("ws://"+location.host+"/pz.porta");
+	ws=new WebSocket("ws://"+location.host+"/pz.a.porta");
 	ws.binaryType="arraybuffer";
-	ws.onopen=function(e){p(" porta");ws.send(keys);}
+	ws.onopen=function(e){
+		p(" porta");
+		compile();
+		ws.send(keys);
+	}
 	ws.onmessage=function(e){
 		frameno++;
 		onframe();
