--- a/src/a/pz/a/index.html
+++ b/src/a/pz/a/index.html
@@ -1,17 +1,89 @@
-<!DOCTYPE html><meta charset="utf-8"><title>clare</title>
-<style>
+<!DOCTYPE html><meta charset="utf-8"><title>clare</title><style>
 	html{white-space:pre;font-family:courier;margin:0;padding:0;margin-left:auto;margin-right:auto;padding:0 4em 0 4em;display:block;text-align:center;width:1024px;color:#222;border-right:0px dotted #666;border-left:0px dotted #666;box-shadow:0 0 27px rgba(0,0,0,1);border-radius:1px}
+	title{display:inline;font-weight:bold;font-size:.5em;padding:1em;padding-top:.5em;border:1px solid gray;background:yellow;box-shadow:0 0 .5em rgba(0,0,0,.5)}
+	a{text-decoration:none;color:blue}
 	#scr{outline:0;border:1px solid gray;box-shadow:0 0 .5em rgba(0,0,0,.5)}
-	#src{background:#eee;font-family:courier;font-size:1em;padding-left:1em;width:20em;height:512em;border:1px dashed gray;display:block;margin-left:auto;margin-right:auto}
+	#src{font-size:1em;line-height:1.3em;background:#eee;font-family:courier;padding-left:1em;width:20em;height:512em;border:1px dashed gray;display:block;margin-left:auto;margin-right:auto}
 	#recvsize{color:green}
 	#sts{color:brown}
-	a{text-decoration:none;color:blue}
-	t{font-size:.5em;padding:1em;padding-top:.5em;border:1px solid gray;background:yellow;box-shadow:0 0 .5em rgba(0,0,0,.5)}
-</style>
-<!--<t><b><a href=zn>clare</a></b></t>-->
-<img id=scr src="" tabindex=0  onkeydown="$.sts.value=event.keyCode;keys=new Uint8Array([0,event.keyCode]);return false;" onkeyup="$.sts.value='';keys=new Uint8Array([0,0]);return false;">
- <output id="recvsize"></output>  <a href="javascript:stop()">off</a><a href="javascript:start()">on</a> <output id="outp"></output> <output id=sts></output>
- <a href="javascript:compile()">compile</a> <b>source</b>
+</style><img id=scr src="data:image/png;base64," alt="display" tabindex=0 onkeydown="keys[1]=event.keyCode;return false;" onkeyup="keys[1]=0;return false;"><output id="f2"></output><output id="f1"></output>
+ <output id="recvsize"></output>  <output id="outp"></output> <output id=sts></output> <a href="javascript:compile()">crun</a><script>
+$=document.all;
+var keys=new Uint8Array([48,0]);
+var ison=false;
+var frameno=0;
+var last_scr_wi=0;
+function start(){
+	if(ison)return;
+	ison=true;
+	$.sts.value="on";
+	frameno=0;
+	ws=new WebSocket("ws://"+location.host+"/pz.a.porta");
+	ws.binaryType="arraybuffer";
+	ws.onopen=function(e){
+		p(" porta");
+		compile();
+		ws.send(keys);
+	}
+	ws.onmessage=function(e){
+		frameno++;
+		onframe();
+		$.recvsize.value="frame: "+frameno+"  "+e.data.byteLength+" B  "+onframe.fps+" fps";
+		var ua=new DataView(e.data);
+		var cmd=ua.getUint8(0);
+		var dat=e.data.slice(1);
+		if(cmd==48){//refresh display
+			var b64=base64ArrayBuffer(dat);
+			$.scr.src='data:image/png;base64,'+b64;
+			if(last_scr_wi!=$.scr.width){//scale display x2
+				$.scr.width*=3;
+				last_scr_wi=$.scr.width;
+			}
+			$.f1.value=$.f2.value='';
+		}else if(cmd==49){//text to f1
+			var str=String.fromCharCode.apply(null,new Uint8Array(dat));
+			$.f1.value='\n'+str;
+			return;
+		}else if(cmd==50){//text to f2
+			var str=String.fromCharCode.apply(null,new Uint8Array(dat));
+			$.f2.value='\n'+str;
+			return;
+		}
+		//console.log(keys);
+		ws.send(keys);
+		$.sts.value=keys[1];
+	};
+	ws.onerror=function(e){console.log("websocket error");};
+	$.scr.focus();
+}
+function stop(){
+	ison=false;
+	ws.close();
+	$.outp.value="";
+	$.sts.value="off";
+//	$.scr.focus();
+}
+function compile(){
+	ws.send("1"+$.src.value);
+	$.scr.focus();
+}
+function p(txt){$.outp.value+=txt;}
+function onframe(){
+	var t=new Date().getTime();
+	var dt=t-onframe.t0;
+	if(dt>1000){
+		onframe.t0=t;
+		var df=frameno-onframe.f0;
+		onframe.f0=frameno;
+		onframe.fps=Math.floor(dt==0?0:df*1000/dt);
+	}
+}
+onframe.t0=0;
+onframe.f0=0;
+onframe.fps=0;
+
+onload=start;
+</script>
 <textarea id=src spellcheck=false>
 # clr(400,100,70,f00,080+p)
 li m 100     # line width
@@ -200,84 +272,8 @@ txt:
 . ffff ffff ffff ffff
 . ffff ffff ffff ffff
 </textarea> 
+
 <script>
-$=document.all;
-var keys=new Uint8Array([0,0]);
-var ison=false;
-var frameno=0;
-var last_scr_wi=0;
-start();
-function start(){
-	if(ison)return;
-	ison=true;
-	$.sts.value="on";
-	frameno=0;
-	ws=new WebSocket("ws://"+location.host+"/pz.a.porta");
-	ws.binaryType="arraybuffer";
-	ws.onopen=function(e){
-		p(" porta");
-		compile();
-		ws.send(keys);
-	}
-	ws.onmessage=function(e){
-		frameno++;
-		onframe();
-		$.recvsize.value="frame: "+frameno+"  "+e.data.byteLength+" B  "+onframe.fps+" fps";
-		var ua=new DataView(e.data);
-		var cmd=ua.getUint8(0);
-		var dat=e.data.slice(1);
-		if(cmd==0){
-			var b64=base64ArrayBuffer(dat);
-			$.scr.src='data:image/png;base64,'+b64;
-			if(last_scr_wi!=$.scr.width){
-				$.scr.width*=2;
-				last_scr_wi=$.scr.width;
-			}
-		}else if(cmd==49){
-			var str=String.fromCharCode.apply(null,new Uint8Array(dat));
-			$.sts.value=str;
-			return;
-		}
-		//console.log(keys);
-		ws.send(keys);
-	};
-	ws.onerror=function(e){alert("websocket error "+e);};
-	$.scr.focus();
-}
-function stop(){
-	ison=false;
-	ws.close();
-	$.outp.value="";
-	$.sts.value="off";
-//	$.scr.focus();
-}
-function compile(){
-	ws.send("1"+$.src.value);
-	$.scr.focus();
-}
-function p(txt){$.outp.value+=txt;}
-function onframe(){
-	var t=new Date().getTime();
-	var dt=t-onframe.t0;
-	if(dt>1000){
-		onframe.t0=t;
-		var df=frameno-onframe.f0;
-		onframe.f0=frameno;
-		onframe.fps=Math.floor(dt==0?0:df*1000/dt);
-	}
-}
-onframe.t0=0;
-onframe.f0=0;
-onframe.fps=0;
-
-
-
-
-
-
-
-
-
 // from https://gist.github.com/jonleighton/958841
 // Converts an ArrayBuffer directly to base64, without any intermediate 'convert to string then
 // use window.btoa' step. According to my tests, this appears to be a faster approach:
