--- a/src/a/pz/a/index.html
+++ b/src/a/pz/a/index.html
@@ -6,52 +6,62 @@
 	#src{font-size:1em;line-height:1.3em;background:#eee;font-family:courier;padding-left:1em;width:20em;height:512em;border:1px dashed gray;display:block;margin-left:auto;margin-right:auto}
 	#recvsize{color:green}
 	#sts{color:brown}
-</style><img id=scr src="data:image/png;base64," alt="display" tabindex=0 onkeydown="keys[1]=event.keyCode;return false;" onkeyup="keys[1]=0;return false;"><output id="f2"></output><output id="f1"></output>
- <output id="recvsize"></output>  <output id="outp"></output> <output id=sts></output> <a href="javascript:compile()">crun</a><script>
+	#f1{color:#800}
+</style><output id="f2"></output>
+<img id=scr src="data:image/png;base64," alt="display" tabindex=0 onkeydown="keys[1]=event.keyCode;return false;" onkeyup="keys[1]=0;return false;">
+ <output id="recvsize"></output>  <output id="outp"></output> <output id=sts></output> <a href="javascript:compile()">crun</a><output id="f1"></output><script>
 $=document.all;
 var keys=new Uint8Array([48,0]);
-var ison=false;
-var frameno=0;
-var last_scr_wi=0;
+var ison=false,frameno=0,last_scr_wi=0,pause=false;
 function start(){
 	if(ison)return;
 	ison=true;
 	$.sts.value="on";
-	frameno=0;
 	ws=new WebSocket("ws://"+location.host+"/pz.a.porta");
 	ws.binaryType="arraybuffer";
 	ws.onopen=function(e){
 		p(" porta");
 		compile();
-		ws.send(keys);
+//		ws.send(keys);
 	}
 	ws.onmessage=function(e){
-		frameno++;
 		onframe();
 		$.recvsize.value="frame: "+frameno+"  "+e.data.byteLength+" B  "+onframe.fps+" fps";
 		var ua=new DataView(e.data);
 		var cmd=ua.getUint8(0);
 		var dat=e.data.slice(1);
 		if(cmd==48){//refresh display
+			frameno++;
 			var b64=base64ArrayBuffer(dat);
 			$.scr.src='data:image/png;base64,'+b64;
 			if(last_scr_wi!=$.scr.width){//scale display x2
 				$.scr.width*=3;
 				last_scr_wi=$.scr.width;
 			}
-			$.f1.value=$.f2.value='';
-		}else if(cmd==49){//text to f1
+		}else if(cmd==49){//text to f1 compile status
 			var str=String.fromCharCode.apply(null,new Uint8Array(dat));
-			$.f1.value='\n'+str;
-			return;
+//			console.log('{'+str+'}')
+			if(str==''){//ok
+				pause=false;
+				frameno=0;
+				$.f1.value='';
+				return;
+			}else{//error
+				pause=true;
+				$.f1.value='\n'+str;
+				return;
+			}
 		}else if(cmd==50){//text to f2
+			pause=true;
 			var str=String.fromCharCode.apply(null,new Uint8Array(dat));
-			$.f2.value='\n'+str;
+			$.f2.value=str;
 			return;
 		}
 		//console.log(keys);
-		ws.send(keys);
-		$.sts.value=keys[1];
+		if(!pause){
+			$.sts.value=keys[1];
+			ws.send(keys);
+		}
 	};
 	ws.onerror=function(e){console.log("websocket error");};
 	$.scr.focus();
