--- a/src/a/pz/a/index.html
+++ b/src/a/pz/a/index.html
@@ -32,8 +32,14 @@ function start(){
 		var dat=e.data.slice(1);
 		if(cmd==48){//refresh display
 			frameno++;
+//			var b64=encode_base64(dat);
 			var b64=base64ArrayBuffer(dat);
 			$.scr.src='data:image/png;base64,'+b64;
+//		    var arrayBufferView = new Uint8Array( dat );
+//		    var blob = new Blob( [ arrayBufferView ], { type: "image/png" } );
+//		    var urlCreator = window.URL || window.webkitURL;
+//		    var imageUrl = urlCreator.createObjectURL( blob );
+//		    $.scr.src=imageUrl;
 			if(last_scr_wi!=$.scr.width){//scale display x2
 				$.scr.width*=3;
 				last_scr_wi=$.scr.width;
@@ -285,6 +291,37 @@ txt:
 </textarea> 
 
 <script>
+//from
+//  http://stackoverflow.com/questions/11089732/display-image-from-blob-using-javascript-and-websockets
+//public method for encoding an Uint8Array to base64
+function encode_base64 (input) {
+    var keyStr = "ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789+/=";
+    var output = "";
+    var chr1, chr2, chr3, enc1, enc2, enc3, enc4;
+    var i = 0;
+
+    while (i < input.length) {
+        chr1 = input[i++];
+        chr2 = i < input.length ? input[i++] : Number.NaN; // Not sure if the index 
+        chr3 = i < input.length ? input[i++] : Number.NaN; // checks are needed here
+
+        enc1 = chr1 >> 2;
+        enc2 = ((chr1 & 3) << 4) | (chr2 >> 4);
+        enc3 = ((chr2 & 15) << 2) | (chr3 >> 6);
+        enc4 = chr3 & 63;
+
+        if (isNaN(chr2)) {
+            enc3 = enc4 = 64;
+        } else if (isNaN(chr3)) {
+            enc4 = 64;
+        }
+        output += keyStr.charAt(enc1) + keyStr.charAt(enc2) +
+                  keyStr.charAt(enc3) + keyStr.charAt(enc4);
+    }
+    return output;
+}
+
+
 // from https://gist.github.com/jonleighton/958841
 // Converts an ArrayBuffer directly to base64, without any intermediate 'convert to string then
 // use window.btoa' step. According to my tests, this appears to be a faster approach:
