--- a/src/a/pz/a/index.html
+++ b/src/a/pz/a/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><meta charset="utf-8"><title>clare</title><style>
+<!DOCTYPE html><meta charset="utf-8"><style>
 	html{white-space:pre;font-family:courier;margin:0;padding:0;margin-left:auto;margin-right:auto;padding:0 4em 0 4em;display:block;text-align:center;width:1024px;color:#222;border-right:0px dotted #666;border-left:0px dotted #666;box-shadow:0 0 27px rgba(0,0,0,1);border-radius:1px}
 	title{display:inline;font-weight:bold;font-size:.5em;padding:1em;padding-top:.5em;border:1px solid gray;background:yellow;box-shadow:0 0 .5em rgba(0,0,0,.5)}
 	a{text-decoration:none;color:blue}
@@ -7,8 +7,9 @@
 	#recvsize{color:green}
 	#sts{color:brown}
 	#f1{color:#800}
-</style><output id="f2"></output>
-<img id=scr src="data:image/png;base64," alt="display" tabindex=0 onkeydown="keys[1]=event.keyCode;return false;" onkeyup="keys[1]=0;return false;">
+</style><title>clare</title>
+<output id="f2"></output>
+<img id=scr src="" alt="display" tabindex=0 onkeydown="keys[1]=event.keyCode;return false;" onkeyup="keys[1]=0;return false;">
  <output id="recvsize"></output>  <output id="outp"></output> <output id=sts></output> <a href="javascript:compile()">crun</a><output id="f1"></output><script>
 $=document.all;
 var keys=new Uint8Array([48,0]);
